--- a/pyspark_tutorial.ipynb
+++ b/pyspark_tutorial.ipynb
@@ -176,6 +176,8 @@
    "source": [
     "# create a schema with the columns age, firstName, gender, lastName and number with required datatypes. \n",
     "# as seen age is defined as Integer now. \n",
+    "\n",
+    "# third argument True() says field can be nullable\n",
     "data_schema = [StructField (('age'), IntegerType(), True ),\n",
     "               StructField (('firstName'), StringType(), True ),\n",
     "               StructField (('gender'), StringType(), True ),\n",
@@ -739,6 +741,49 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "beb6b329",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+-----------------+\n",
+      "|      Date|     Open|            Close|\n",
+      "+----------+---------+-----------------+\n",
+      "|2014-06-13|92.199997|        91.279999|\n",
+      "|2014-06-19|92.290001|        91.860001|\n",
+      "|2014-06-20|91.849998|        90.910004|\n",
+      "|2014-06-23|    91.32|90.83000200000001|\n",
+      "|2014-06-24|    90.75|        90.279999|\n",
+      "+----------+---------+-----------------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "+----------+---------+-----------------+\n",
+      "|      Date|     Open|            Close|\n",
+      "+----------+---------+-----------------+\n",
+      "|2014-06-13|92.199997|        91.279999|\n",
+      "|2014-06-19|92.290001|        91.860001|\n",
+      "|2014-06-20|91.849998|        90.910004|\n",
+      "|2014-06-23|    91.32|90.83000200000001|\n",
+      "|2014-06-24|    90.75|        90.279999|\n",
+      "+----------+---------+-----------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write() also can be used similar to filter()\n",
+    "df.where((df['Open']<100) & (df['Close']<92)).select(['Date','Open','Close']).show(5)\n",
+    "\n",
+    "# filter() also can be used similar to write()\n",
+    "df.filter((df['Open']<100) & (df['Close']<92)).select(['Date','Open','Close']).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "622ea4c6",
    "metadata": {},
    "outputs": [
@@ -746,43 +791,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+------------------+------------------+------------------+------------------+---------+------------------+\n",
-      "|      Date|              Open|              High|               Low|             Close|   Volume|         Adj Close|\n",
-      "+----------+------------------+------------------+------------------+------------------+---------+------------------+\n",
-      "|2010-01-04|        213.429998|        214.499996|212.38000099999996|        214.009998|123432400|         27.727039|\n",
-      "|2010-01-05|        214.599998|        215.589994|        213.249994|        214.379993|150476200|27.774976000000002|\n",
-      "|2010-01-06|        214.379993|            215.23|        210.750004|        210.969995|138040000|27.333178000000004|\n",
-      "|2010-01-07|            211.75|        212.000006|        209.050005|            210.58|119282800|          27.28265|\n",
-      "|2010-01-08|        210.299994|        212.000006|209.06000500000002|211.98000499999998|111902700|         27.464034|\n",
-      "|2010-01-11|212.79999700000002|        213.000002|        208.450005|210.11000299999998|115557400|         27.221758|\n",
-      "|2010-01-12|209.18999499999998|209.76999500000002|        206.419998|        207.720001|148614900|          26.91211|\n",
-      "|2010-01-13|        207.870005|210.92999500000002|        204.099998|        210.650002|151473000|          27.29172|\n",
-      "|2010-01-14|210.11000299999998|210.45999700000002|        209.020004|            209.43|108223500|         27.133657|\n",
-      "|2010-01-15|210.92999500000002|211.59999700000003|        205.869999|            205.93|148516900|26.680197999999997|\n",
-      "|2010-01-19|        208.330002|215.18999900000003|        207.240004|        215.039995|182501900|27.860484999999997|\n",
-      "|2010-01-20|        214.910006|        215.549994|        209.500002|            211.73|153038200|         27.431644|\n",
-      "|2010-01-21|        212.079994|213.30999599999998|        207.210003|        208.069996|152038600|         26.957455|\n",
-      "|2010-01-22|206.78000600000001|        207.499996|            197.16|            197.75|220441900|         25.620401|\n",
-      "|2010-01-25|202.51000200000001|        204.699999|        200.190002|        203.070002|266424900|26.309658000000002|\n",
-      "|2010-01-26|205.95000100000001|        213.710005|        202.580004|        205.940001|466777500|         26.681494|\n",
-      "|2010-01-27|        206.849995|            210.58|        199.530001|        207.880005|430642100|26.932840000000002|\n",
-      "|2010-01-28|        204.930004|        205.500004|        198.699995|        199.289995|293375600|25.819922000000002|\n",
-      "|2010-01-29|        201.079996|        202.199995|        190.250002|        192.060003|311488100|         24.883208|\n",
-      "|2010-02-01|192.36999699999998|             196.0|191.29999899999999|        194.729998|187469100|         25.229131|\n",
-      "+----------+------------------+------------------+------------------+------------------+---------+------------------+\n",
-      "only showing top 20 rows\n",
+      "+----------+----------+----------+------------------+------------------+---------+------------------+\n",
+      "|      Date|      Open|      High|               Low|             Close|   Volume|         Adj Close|\n",
+      "+----------+----------+----------+------------------+------------------+---------+------------------+\n",
+      "|2010-01-04|213.429998|214.499996|212.38000099999996|        214.009998|123432400|         27.727039|\n",
+      "|2010-01-05|214.599998|215.589994|        213.249994|        214.379993|150476200|27.774976000000002|\n",
+      "|2010-01-06|214.379993|    215.23|        210.750004|        210.969995|138040000|27.333178000000004|\n",
+      "|2010-01-07|    211.75|212.000006|        209.050005|            210.58|119282800|          27.28265|\n",
+      "|2010-01-08|210.299994|212.000006|209.06000500000002|211.98000499999998|111902700|         27.464034|\n",
+      "+----------+----------+----------+------------------+------------------+---------+------------------+\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Just like SQL Where clause, we can use filter to select the records from dataframe based on condition. \n",
-    "df.filter(\"Close < 500\").show()"
+    "df.filter(\"Close < 500\").show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "3ff738cf",
    "metadata": {},
    "outputs": [
@@ -790,45 +820,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------+------------------+\n",
-      "|              Open|             Close|\n",
-      "+------------------+------------------+\n",
-      "|        213.429998|        214.009998|\n",
-      "|        214.599998|        214.379993|\n",
-      "|        214.379993|        210.969995|\n",
-      "|            211.75|            210.58|\n",
-      "|        210.299994|211.98000499999998|\n",
-      "|212.79999700000002|210.11000299999998|\n",
-      "|209.18999499999998|        207.720001|\n",
-      "|        207.870005|        210.650002|\n",
-      "|210.11000299999998|            209.43|\n",
-      "|210.92999500000002|            205.93|\n",
-      "|        208.330002|        215.039995|\n",
-      "|        214.910006|            211.73|\n",
-      "|        212.079994|        208.069996|\n",
-      "|206.78000600000001|            197.75|\n",
-      "|202.51000200000001|        203.070002|\n",
-      "|205.95000100000001|        205.940001|\n",
-      "|        206.849995|        207.880005|\n",
-      "|        204.930004|        199.289995|\n",
-      "|        201.079996|        192.060003|\n",
-      "|192.36999699999998|        194.729998|\n",
-      "+------------------+------------------+\n",
-      "only showing top 20 rows\n",
+      "+----------+------------------+\n",
+      "|      Open|             Close|\n",
+      "+----------+------------------+\n",
+      "|213.429998|        214.009998|\n",
+      "|214.599998|        214.379993|\n",
+      "|214.379993|        210.969995|\n",
+      "|    211.75|            210.58|\n",
+      "|210.299994|211.98000499999998|\n",
+      "+----------+------------------+\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# filter() to select specific rows that has \"Close\" < 500. and select() to select specific columns. \n",
-    "df.filter(\"Close < 500\").select([\"Open\", \"Close\"]).show()\n",
+    "df.filter(\"Close < 500\").select([\"Open\", \"Close\"]).show(5)\n",
     "\n",
     "# df.filter(df['close']>500).select(['Open','Close']).show()     --> Even this can be used"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "173312a3",
    "metadata": {},
    "outputs": [
@@ -854,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "469f7edc",
    "metadata": {},
    "outputs": [
@@ -876,7 +891,7 @@
        "[Row(Date=datetime.date(2010, 1, 22), Open=206.78000600000001, High=207.499996, Low=197.16, Close=197.75, Volume=220441900, Adj Close=25.620401)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "397f4143",
    "metadata": {},
    "outputs": [
@@ -903,7 +918,7 @@
        " Row(Date=datetime.date(2012, 9, 21), Open=702.409988, High=705.070023, Low=699.3599849999999, Close=700.089989, Volume=142897300, Adj Close=91.09278)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "77085372",
    "metadata": {},
    "outputs": [
@@ -926,7 +941,7 @@
        "99507800"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "5488c497",
    "metadata": {},
    "outputs": [],
@@ -959,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "4d41126b",
    "metadata": {},
    "outputs": [
@@ -995,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "8a08e470",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "cb7d291d",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "e65943dd",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "1f6cbe06",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "64edde4d",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "7c41983c",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "9f677d26",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "0a44b7c2",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "1ed00c5e",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "e8c675dc",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "c0130685",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "4715c82c",
    "metadata": {},
    "outputs": [
@@ -1432,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "11d23389",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "a727da89",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "d5389733",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "b62accec",
    "metadata": {},
    "outputs": [
@@ -1522,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "00abc116",
    "metadata": {},
    "outputs": [
@@ -1546,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "db4379c8",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "d34cc742",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "f3c11881",
    "metadata": {},
    "outputs": [
@@ -1620,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "id": "bc25a8ee",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "7fbe7f5b",
    "metadata": {},
    "outputs": [
@@ -1674,7 +1689,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
+   "id": "e4d9a017",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+-----+\n",
+      "|  Id|   Name|Sales|\n",
+      "+----+-------+-----+\n",
+      "|emp1|   John|  0.0|\n",
+      "|emp2|Missing|  0.0|\n",
+      "|emp3|Missing|345.0|\n",
+      "|emp4|  Cindy|456.0|\n",
+      "+----+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Way to fill the missing values specific to columns\n",
+    "df.na.fill({'Name':'Missing','Sales':0}).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "4379298f",
    "metadata": {},
    "outputs": [
@@ -1711,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "id": "3f821624",
    "metadata": {},
    "outputs": [
@@ -1749,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "id": "42d33630",
    "metadata": {},
    "outputs": [
@@ -1759,7 +1801,7 @@
        "400.5"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "id": "3d721f33",
    "metadata": {},
    "outputs": [
@@ -1799,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "id": "20c5e349",
    "metadata": {},
    "outputs": [
@@ -1834,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "id": "2e3a6b3a",
    "metadata": {},
    "outputs": [],
@@ -1846,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "id": "d6e272ac",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "id": "da47a858",
    "metadata": {},
    "outputs": [
@@ -1895,7 +1937,7 @@
        " Row(Date=datetime.date(2010, 1, 8), Open=210.299994, High=212.000006, Low=209.06000500000002, Close=211.98000499999998, Volume=111902700, Adj Close=27.464034)]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "id": "897e3c7b",
    "metadata": {},
    "outputs": [
@@ -1940,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "id": "57bea8da",
    "metadata": {},
    "outputs": [
@@ -1950,7 +1992,7 @@
        "<bound method DataFrame.printSchema of DataFrame[Date: date, Open: double, High: double, Low: double, Close: double, Volume: int, Adj Close: double]>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "id": "7367002c",
    "metadata": {},
    "outputs": [],
@@ -1974,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "id": "e2f3efb8",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "id": "28a942f0",
    "metadata": {},
    "outputs": [
@@ -2049,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "id": "f113f64f",
    "metadata": {},
    "outputs": [
@@ -2082,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "id": "b28e2eab",
    "metadata": {},
    "outputs": [
@@ -2113,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "id": "ce191e72",
    "metadata": {},
    "outputs": [
