--- a/pyspark_tutorial.ipynb
+++ b/pyspark_tutorial.ipynb
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "beb6b329",
+   "id": "497667ad",
    "metadata": {},
    "outputs": [
     {
@@ -954,6 +954,168 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b7c8206",
+   "metadata": {},
+   "source": [
+    "## Transforming and writing into CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "21a53ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+----------+------------------+------------------+---------+------------------+\n",
+      "|      Date|      Open|      High|               Low|             Close|   Volume|         Adj Close|\n",
+      "+----------+----------+----------+------------------+------------------+---------+------------------+\n",
+      "|2010-01-04|213.429998|214.499996|212.38000099999996|        214.009998|123432400|         27.727039|\n",
+      "|2010-01-05|214.599998|215.589994|        213.249994|        214.379993|150476200|27.774976000000002|\n",
+      "|2010-01-06|214.379993|    215.23|        210.750004|        210.969995|138040000|27.333178000000004|\n",
+      "|2010-01-07|    211.75|212.000006|        209.050005|            210.58|119282800|          27.28265|\n",
+      "|2010-01-08|210.299994|212.000006|209.06000500000002|211.98000499999998|111902700|         27.464034|\n",
+      "+----------+----------+----------+------------------+------------------+---------+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "046c8ba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------+------+------+------+---------+---------+\n",
+      "|      Date|  Open|  High|   Low| Close|   Volume|Adj Close|\n",
+      "+----------+------+------+------+------+---------+---------+\n",
+      "|2010-01-04|213.43| 214.5|212.38|214.01|123432400|    27.73|\n",
+      "|2010-01-05| 214.6|215.59|213.25|214.38|150476200|    27.77|\n",
+      "|2010-01-06|214.38|215.23|210.75|210.97|138040000|    27.33|\n",
+      "|2010-01-07|211.75| 212.0|209.05|210.58|119282800|    27.28|\n",
+      "|2010-01-08| 210.3| 212.0|209.06|211.98|111902700|    27.46|\n",
+      "+----------+------+------+------+------+---------+---------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import round, col\n",
+    "\n",
+    "df=df.withColumn(\"Open\",round(col('Open'),2))\n",
+    "df=df.withColumn(\"High\",round(col('High'),2))\n",
+    "df=df.withColumn(\"Low\",round(col('Low'),2))\n",
+    "df=df.withColumn(\"Close\",round(col('Close'),2))\n",
+    "df=df.withColumn(\"Adj Close\",round(col('Adj Close'),2))\n",
+    "df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d7b2639e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------+------+------+------+---------+---------+-------+\n",
+      "|      Date|  Open|  High|   Low| Close|   Volume|Adj Close|Day_Avg|\n",
+      "+----------+------+------+------+------+---------+---------+-------+\n",
+      "|2010-01-04|213.43| 214.5|212.38|214.01|123432400|    27.73| 213.44|\n",
+      "|2010-01-05| 214.6|215.59|213.25|214.38|150476200|    27.77| 214.42|\n",
+      "|2010-01-06|214.38|215.23|210.75|210.97|138040000|    27.33| 212.99|\n",
+      "|2010-01-07|211.75| 212.0|209.05|210.58|119282800|    27.28| 210.53|\n",
+      "|2010-01-08| 210.3| 212.0|209.06|211.98|111902700|    27.46| 210.53|\n",
+      "+----------+------+------+------+------+---------+---------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finding the average of the day\n",
+    "df=df.withColumn(\"Day_Avg\", round(((col(\"High\") + col(\"Low\"))/2),2))\n",
+    "\n",
+    "df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "43e4da20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------+------+------+------+---------+---------+-------+----+\n",
+      "|      Date|  Open|  High|   Low| Close|   Volume|Adj Close|Day_Avg|Year|\n",
+      "+----------+------+------+------+------+---------+---------+-------+----+\n",
+      "|2010-01-04|213.43| 214.5|212.38|214.01|123432400|    27.73| 213.44|2010|\n",
+      "|2010-01-05| 214.6|215.59|213.25|214.38|150476200|    27.77| 214.42|2010|\n",
+      "|2010-01-06|214.38|215.23|210.75|210.97|138040000|    27.33| 212.99|2010|\n",
+      "|2010-01-07|211.75| 212.0|209.05|210.58|119282800|    27.28| 210.53|2010|\n",
+      "|2010-01-08| 210.3| 212.0|209.06|211.98|111902700|    27.46| 210.53|2010|\n",
+      "+----------+------+------+------+------+---------+---------+-------+----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import year\n",
+    "\n",
+    "df=df.withColumn(\"Year\",year(df['Date']))\n",
+    "\n",
+    "df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8bba9c77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'    \\ndf.coalesce(1).write.csv(\\n    \"C:/Users/dilip/Documents/Dilip Studies/pyspark/updated\",\\n    header=True,\\n    mode=\"overwrite\"\\n)\\n'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exporting the transformed dataframe --- WAS NOT SUCCESSFULL\n",
+    "'''    \n",
+    "df.coalesce(1).write.csv(\n",
+    "    \"C:/Users/dilip/Documents/Dilip Studies/pyspark/updated\",\n",
+    "    header=True,\n",
+    "    mode=\"overwrite\"\n",
+    ")\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b9033952",
    "metadata": {},
    "source": [
@@ -962,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "5488c497",
    "metadata": {},
    "outputs": [],
@@ -974,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "id": "4d41126b",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "id": "8a08e470",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "cb7d291d",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "e65943dd",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "id": "1f6cbe06",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "id": "64edde4d",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "id": "7c41983c",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "id": "9f677d26",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "id": "0a44b7c2",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "id": "1ed00c5e",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "e8c675dc",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "id": "c0130685",
    "metadata": {},
    "outputs": [
@@ -1385,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "id": "4715c82c",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "id": "11d23389",
    "metadata": {},
    "outputs": [],
@@ -1459,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "id": "a727da89",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "id": "d5389733",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "id": "b62accec",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "id": "00abc116",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "id": "db4379c8",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "id": "d34cc742",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "id": "f3c11881",
    "metadata": {},
    "outputs": [
@@ -1635,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "id": "bc25a8ee",
    "metadata": {},
    "outputs": [
@@ -1662,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "id": "7fbe7f5b",
    "metadata": {},
    "outputs": [
@@ -1689,8 +1851,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "e4d9a017",
+   "execution_count": 68,
+   "id": "d69d7cee",
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "id": "4379298f",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "id": "3f821624",
    "metadata": {},
    "outputs": [
@@ -1791,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "id": "42d33630",
    "metadata": {},
    "outputs": [
@@ -1801,7 +1963,7 @@
        "400.5"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "id": "3d721f33",
    "metadata": {},
    "outputs": [
@@ -1841,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "id": "20c5e349",
    "metadata": {},
    "outputs": [
@@ -1876,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "id": "2e3a6b3a",
    "metadata": {},
    "outputs": [],
@@ -1888,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "id": "d6e272ac",
    "metadata": {},
    "outputs": [
@@ -1923,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "id": "da47a858",
    "metadata": {},
    "outputs": [
@@ -1937,7 +2099,7 @@
        " Row(Date=datetime.date(2010, 1, 8), Open=210.299994, High=212.000006, Low=209.06000500000002, Close=211.98000499999998, Volume=111902700, Adj Close=27.464034)]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1948,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "id": "897e3c7b",
    "metadata": {},
    "outputs": [
@@ -1982,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "id": "57bea8da",
    "metadata": {},
    "outputs": [
@@ -1992,7 +2154,7 @@
        "<bound method DataFrame.printSchema of DataFrame[Date: date, Open: double, High: double, Low: double, Close: double, Volume: int, Adj Close: double]>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "id": "7367002c",
    "metadata": {},
    "outputs": [],
@@ -2016,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "id": "e2f3efb8",
    "metadata": {},
    "outputs": [
@@ -2060,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "id": "28a942f0",
    "metadata": {},
    "outputs": [
@@ -2091,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "id": "f113f64f",
    "metadata": {},
    "outputs": [
@@ -2124,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 83,
    "id": "b28e2eab",
    "metadata": {},
    "outputs": [
@@ -2155,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 84,
    "id": "ce191e72",
    "metadata": {},
    "outputs": [
